[build-system]
requires = [
    "flit_core >=2,<4",
    "torch",
    "transformers",
    "re",
    "typing"
]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "keytotext"
author = "Gagan Bhatia"
author-email = "gbhatia880@gmail.com"
home-page = "https://github.com/gagan3012/keytotext"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"
requires-python = ">=3.7"

