[build-system]
requires = [
    "flit_core >=2,<4"
]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "keytotext"
author = "Gagan Bhatia"
author-email = "gbhatia880@gmail.com"
home-page = "https://github.com/gagan3012/keytotext"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
description-file = "README.md"
requires-python = ">=3.7"
requires = [
    "torch",
    "transformers",
]


